# ai-rpg-portfolio

Team09-main/: .gitignore  GEMINI.md  README.md  USER_GEMINI.md  Walkthrough.md  pyproject.toml
Team09-main/JsonFolder/: field.json  final_story.json  maou.json  monster.json  monster_story.json  personality.json  yuusya.json
Team09-main/PromptFolder/: final_story.txt  maou.txt  monster.txt  monster_story.txt  personality.txt  yuusya.txt
Team09-main/PromptYaml/: final_story.yaml  maou.yaml  monster.yaml  monster_story.yaml  personality.yaml  yuusya.yaml
Team09-main/spec/: system_design.md
Team09-main/src/: main.py
Team09-main/src/aihack/: __init__.py
Team09-main/src/aihack/core/: __init__.py  engine.py
Team09-main/src/aihack/llm/: __init__.py  abstract.py  google_genai.py  mock.py
Team09-main/src/aihack/models/: __init__.py  data_models.py
Team09-main/src/aihack/services/: __init__.py  loader.py  prompt_manager.py  status.py
Team09-main/src/aihack/ui/: __init__.py  console.py  pygame_ui.py
Team09-main/src/aihack/ui/graphical/: components.py  constants.py  renderer.py
Team09-main/tests/: test_data_loader.py  test_status_service.py
