[project]
name = "aihack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sky249712", email = "b2232720@photon.chitose.ac.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.56.0",
    "pygame>=2.6.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
